# PaperTTY

./: one_page.py  pyproject.toml
papertty/: papertty.py
papertty/drivers/: driver_it8951.py
