[tool.poetry]
name = "papertty"
version = "0.1.8"
description = "Python module to render a TTY or VNC on e-ink"
authors = ["Jouko Strömmer <jouko.strommer@iki.fi>"]
readme = "README.md"
repository = "https://github.com/joukos/PaperTTY"
homepage = "https://github.com/joukos/PaperTTY"

[tool.poetry.dependencies]
click = ">=8.0.0,<9"
Pillow = "10.4.0"
python = ">=3.10,<4.0"
gpiozero = "^2.0.0"
lgpio    = "^0.2.0.0"
"RPi.GPIO" = "^0.7.1"
spidev = "^3.6"
Adafruit-Blinka = ">=9.0"
adafruit-circuitpython-mpu6050 = ">=1.3.8"

[tool.poetry.scripts]
papertty = "papertty.papertty:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
